Dec 20, 2012 - chris ---------------------------------------------------
o Removed the deprecated flag HAM_LOCK_EXCLUSIVE
o Renamed ham_check_integrity to ham_db_check_integrity

Dec 19, 2012 - chris ---------------------------------------------------
o Removed the flag HAM_USE_BTREE; it was not required.

Dec 18, 2012 - chris ---------------------------------------------------
o Removed HAM_FAST_ESTIMATE and improved performance of ham_db_get_key_count
	if use of duplicate keys are disabled

Dec 18, 2012 - chris ---------------------------------------------------
o Added two new tools: ham_export to export a database into a binary format,
	ham_import to create an Environment from the exported data (or to merge
	the data into an existing Environment). ham_export is linked statically.
	ham_export/ham_import will provide an upgrade path for newer hamsterdb
	versions.

Dec 17, 2012 - chris ---------------------------------------------------
o Applied patch with many automake/autoconf related cleanups (thanks,
	Daniel Richard G. <skunk@iskunk.org>)

Dec 13, 2012 - chris ---------------------------------------------------
o Updated mmap support; mmap is now about 30% faster compared to the previous
	implementation

Dec 07, 2012 - chris ---------------------------------------------------
o Minor performance improvement if HAM_ENABLE_FSYNC and HAM_ENABLE_TRANSACTIONS

Dec 06, 2012 - chris ---------------------------------------------------
o Removed the deprecated flags HAM_HINT_UBER_FAST_ACCESS, HAM_HINT_RANDOM_ACCESS
    and HAM_HINT_SEQUENTIAL

Dec 05, 2012 - chris ---------------------------------------------------
o Changed interface of ham_cursor_create from
        ham_cursor_create(ham_db_t *db, ham_txn_t *txn, ham_u32_t flags,
            ham_cursor_t **cursor);
    to
        ham_cursor_create(ham_cursor_t **cursor, ham_db_t *db, ham_txn_t *txn,
            ham_u32_t flags);
o Renamed several functions to improve consistency: