@@ -316,8 +316,6 @@ class db {
 
     /** Returns the last Database error. */
     ham_status_t get_error() {
-      if (!m_db)
-        return (HAM_NOT_INITIALIZED);
       return (ham_db_get_error(m_db));
     }
 
